Fix some spacing on the home page for phones

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -11,7 +11,7 @@
 .about-container {
   max-width: 600px + 32px;
   margin-top: 8px;
-  margin-bottom: 16px;
+  padding-bottom: 16px;
   width: 100%;
 }
 
@@ -27,6 +27,7 @@
 }
 
 .main-section {
+  padding-top: 8px;
   max-width: 600px + 32px;
   width: 100%;
   display: flex;
